k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-example
  name: node-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-example
  template:
    metadata:
      labels:
        app: node-example
    spec:
      containers:
        - name: node-example
          image: yogendra/hpa-sample:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            limits:
              cpu: "0.5"
            requests:
              cpu: "0.25"
