k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-example
  labels:
    app: node-example
spec:
  selector:
    app: node-example
  ports:
    - name: http
      port: 3000
      protocol: TCP
  type: ClusterIP
